--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 body {
   font-family: "Times New Roman", Times, serif;
   padding: 1em;
-  background-color: fff;
+  background-color: #fff;
 }
 
 .container {
