--- a/src/style.css
+++ b/src/style.css
@@ -14,11 +14,8 @@ body {
 }
 
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 50%;
+  margin: auto;
   border: 2px solid rgb(147, 160, 134);
   border-radius: 1em;
   padding: 3em;
